@@ -1,3 +1,12 @@
+2005-01-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/util/EnumMap.java
+	Corrected comment for accuracy.
+	* java/util/EnumSet.java
+	Corrected indenting.
+	* java/util/Hashtable.java
+	Corrected bracketing of author.
+
 2005-01-11  Tom Tromey  <tromey@redhat.com>
 
 	* java/util/AbstractList.java (set, add): Fixed argument types.
